--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
+
 body{
     margin: 0px;
     padding: 0px;
-    background-color: #45a188;
+    font-family: 'Roboto Slab', serif;
+    background-color: #fff;
 }
 html{
     overflow-x: hidden;
@@ -9,21 +12,19 @@ html{
 /* ==============style on unordered lis================== */
 ul{
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     list-style-type: none;
     background-color: black;
     margin: 0px;
 }
 ul li{
-    padding: 25px;
+    padding: 30px 0px 30px 60px;
 }
-ul li:hover{
-    background-color: gray;
-}
+
 ul li #portfolio{
     font-weight: 800;
-    font-size: 18px;
+    font-size: 20px;
     color: orangered;
     font-family: cursive;
 }
@@ -32,8 +33,27 @@ ul li a{
     text-decoration: none;
     color: white;
     font-weight: 700;
-    font-size: 17px;
+    font-size: 18px;
 }
+
+ul li a:hover{
+    color: orangered;
+}
+
+@media(max-width:425px)
+{
+    ul li a{
+        font-size: 8px;
+    }
+    ul li{
+        padding: 15px 5px;
+    }
+    ul li #portfolio{
+        font-size: 12px;
+    }
+}
+
+
 /* ================div hero tag======================== */
 .hero{
     height: 690px;
@@ -42,6 +62,7 @@ ul li a{
     align-items: center;
     justify-content: space-around;
     border: 1px solid black;
+    overflow-x: hidden;
 }
 /* ==============box1 height width=============== */
 #box1{
@@ -51,6 +72,7 @@ ul li a{
    justify-content: center;
    align-items: center;
    flex-direction: column;
+   overflow-x: hidden;
    /* background-color: wheat; */
 }
 #box1 #box-1{
@@ -67,20 +89,19 @@ ul li a{
 #box1 #box-1 #name{
     font-weight: 800;
     font-size: 45px;
-    font-family: cursive;
-    color: whitesmoke;
+    color: #24315E;
 }
 
 #box1 #box-1 span{
-    padding:8px 40px;
-    background-color: red;
+    padding:13px 40px;
+    background-color: #24315E;
     color: white;
     border: 1px solid transparent;
 }
 #box1 #box-1 p{
     font-weight: 800;
-    line-height: 15px;
-    padding: 5px 15px;
+    line-height: 14px;
+    padding: 7px 15px;
 }
 /* =========box1 fo box-1 heigh width============== */
 #box1 #box-2{
@@ -94,37 +115,68 @@ ul li a{
 /* ==========box1 of box-2 btn(know more..) styling================= */
 #box1 #box-2 #btn{
     margin-left: 15px;
-    padding: 13px 30px;
+    padding: 15px 33px;
     outline: none;
     font-weight: 700;
-    border-radius: 20px;
-    border: none;
+    border: 1px solid;
     color: white;
-    background-color: red;
+    background-color: #24315E;
 }
 /* ==========box1 of box-2 resume styling================= */
 #box1 #box-2 #resume{
     margin-left: 15px;
-    padding: 13px 38px;
+    padding: 15px 38px;
     outline: none;
     font-weight: 700;
-    border-radius: 20px;
-    border: none;
+    border: 1px solid;
     color: white;
-    background-color: red;
+    background-color: #24315E;
 }
 /* =========hover effect of button============= */
 #box1 #box-2 #btn:hover{
     cursor: pointer;
     transition: .5s;
-    background-color: green;
+    color: #24315E;
+    background-color: white;
 }
 /* ============hover effect on resume button============= */
 #box1 #box-2 #resume:hover{
     cursor: pointer;
     transition: .5s;
-    background-color: green;
+    color: #24315E;
+    background-color: white;
 }
+
+@media(max-width:425px){
+    .hero{
+        width: 100%;
+        display: block;
+    }
+    #box1{
+        display: block;
+        font-size: 10px;
+        width: 100%;
+        /* background-color: wheat; */
+     }
+     #box1 #box-1{
+        width: 100%;
+     }
+     #box1 #box-1 #name{
+        font-size: 25px;
+    }
+    #box1 #box-1 p{
+        padding: 15px 17px;
+        font-size: 12px;
+    }
+    #box1 #box-2{
+        height: 25%;
+        width: 80%;
+        /* border: 1px solid; */
+    }
+}
+
+
+
 /* ========box2 height width================= */
 #box2{
     height: 80%;
@@ -133,6 +185,7 @@ ul li a{
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    overflow-x: hidden;
  }
  /* =============box2 of box-1 height and width=============== */
  #box2 #box2-box-1{
@@ -145,13 +198,13 @@ ul li a{
     border-bottom-left-radius: 100px;
     box-shadow: 0px 0px 8px 2px black;
     overflow: hidden;
-    background-color: red;
+    background-color: #24315E;
+    overflow-x: hidden;
     /* background-image: linear-gradient(to top, #035b5b, teal, #45a188); */
  }
  #box2 #box2-box-1 img{
     height: 470px;
-    filter: drop-shadow(0px 1px 10px white);
-    filter: hue-rotate(140deg);
+    /* filter: hue-rotate(140deg); */
  }
  /* ================box2 of box-2 height width================== */
  #box2 #box2-box-2{
@@ -173,3 +226,26 @@ ul li a{
  #box2 #box2-box-2 i:hover{
     text-shadow: 0px 1px 20px white;
  }
+
+@media(max-width:425px){
+    #box2{
+        height: 55%;
+        width:425px;
+     }
+     #box2 #box2-box-1 img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        /* filter: hue-rotate(140deg); */
+     }
+     /* ================box2 of box-2 height width================== */
+     #box2 #box2-box-2{
+        height: 40%;
+        width: 4%;
+     }
+}
+
+
+
+
+
