--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ ul li a:hover{
 
 /* ================div hero tag======================== */
 .hero{
-    height: 690px;
+    height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
